Hopefully last code fixes.

--- a/tex/31.tex
+++ b/tex/31.tex
@@ -865,15 +865,15 @@ def energy_correction(Q, dt, u, u_, T_):
         return backward_euler(T, T_, dt)
 
     # Add syntactical sugar for a_A and a_D
-    def a_A(T, u, psi):
+    def a_A(u, T, psi):
         return advection(T, psi, u, n, theta=0.5)
-    def a_D(T, u, psi):
+    def a_D(T, psi):
         return diffusion(T, psi, k_c, alpha, n, h, theta=0.5)
 
     # Define form
     F = (Dt(T)*psi*dx
-         + a_A(T, u, psi) + a_A(T_, u_, psi)
-         + a_D(T, u, psi) + a_D(T_, u_, psi))
+         + a_A(u, T, psi) + a_A(u_, T_, psi)
+         + a_D(T, psi) + a_D(T_, psi))
 
     return (lhs(F), rhs(F))
     \end{python}
