Hack to fix strange problem with figure numbering when ffigbox is used in combination with subfloat.

--- a/tex/27.tex
+++ b/tex/27.tex
@@ -947,7 +947,7 @@ and tracks the motion of the cube over 2~s.
 
 The problem is specified in the user-created class \emp{Release},
 which derives from \emp{Hyperelasticity}. This example is similar to
-the previous one, except\AQ{Figure~27.12 figure \& citation not in ms} that since it is a dynamic calculation, it also
+the previous one, except that since it is a dynamic calculation, it also
 provides initial conditions, a reference density and information about
 time-stepping. Again, the methods listed in
 Figure~\ref{code:narayanan:dynamicrelease} are straightforward, and
@@ -1018,9 +1018,9 @@ respectively.
 
 \begin{figure}
 \bwfig
-  \ffigbox{\caption{Relaxation and subsequent re-twisting of a
+  \ffigbox{\caption{Relaxation and re-twisting of a
       released cube over the first 0.5~s of the
-      calculation.}\label{fig:narayanan:releasedcube}}
+      calculation.\quad\quad\quad\quad}\label{fig:narayanan:releasedcube}}{}
           {
             \subfloat[$t = 0.0$ s]{
               \includegraphics[width=\twofigsfull]{chapters/narayanan/images/png/release_000.png}
@@ -1137,7 +1137,7 @@ while t <= T:
 
 The advantage of solving the problem in this manner is that, now, one
 has more control over calculations in \twist{}. For example, rather
-than just fixing\AQ{27.17~figure \& citation  not in ms} a traction force on the surface of the dolphin to
+than just fixing a traction force on the surface of the dolphin to
 mimic the effect of flow field, one can instead solve at each time
 step an actual flow field and use it to correctly drive the solid
 mechanics. This functionality of \twist{} is used in a following
