--- a/tex/19.tex
+++ b/tex/19.tex
@@ -323,16 +323,16 @@ into the SWIG generated C++ wrapper file.
 import_array();
 %}
 \end{swigcode}
-SWIG inserts code that resides in a \emp{\%\{$\ldots$\}\%} block,
+SWIG inserts code that resides in a \emp{\%\{$\ldots$\%\}} block,
 verbatim at the top of the generated C++ wrapper file. Note that
-\emp{\%\{$\ldots$\}\%} is short for \emp{\%header\%\{$\ldots$\}\%}. Hence,
+\emp{\%\{$\ldots$\%\}} is short for \emp{\%header\%\{$\ldots$\%\}}. Hence,
 the first block of code is similar to the include statements you
 would put in a standard C++ program. The code in the second block,
 \emp{\%init\%\{$\ldots$\}\%}, is inserted in the code where the
 Python module is initialized. A typical example of such a function is
 \emp{import\_array()}, which initializes the \numpy module. SWIG provides
 several such statements, each inserting code verbatim into the wrapper
-file at different positions.
+file at different positions. 
 
 \subsection{Reference counting using \emp{shared\_ptr}}
 In the previous example dealing with \emp{operator+=}, we saw that
@@ -449,11 +449,15 @@ same file and looks like:
 }
 \end{swigcode}
 %$ to fool emacs highlight...
-Here we rely on another fragment provided function:
-\emp{PyInteger\_Check}, which we provide as a substitute to the built
-in \emp{PyInt\_Check} function. The reason for that is that
-\emp{PyInt\_Check} in Python2.6 can not be combined with \numpy
-\emp{Int}.
+The first string in the \emp{fragment} declaration is the name of the
+\emp{fragment} and the second string defines where the code should be
+inserted. Here we insert it into the \emp{"header"} section of the
+generated code. This is similar to the code inserted using
+\emp{\%\{$\ldots$\%\}} above. Here we also rely on another fragment
+provided function: \emp{PyInteger\_Check}, which we provide as a
+substitute to the built in \emp{PyInt\_Check} function. The reason for
+that is that \emp{PyInt\_Check} in Python2.6 can not be combined with
+\numpy \emp{Int}.
 
 In \emp{numpy\_typemaps.i} are typemaps for C-arrays of primitive
 types: \emp{double}, \emp{int} and \emp{dolfin::uint} defined. As in
