Proof-reading fixes for Chapter 3.

--- a/tex/3.tex
+++ b/tex/3.tex
@@ -16,7 +16,7 @@ elements. We thus bypass elements defined on quadrilaterals and hexahedra,
 composite and macro-element techniques, as well as XFEM-type methods. Even
 among polynomial-based elements on simplices, the list of elements can be
 extended. Nonetheless, this chapter presents a comprehensive collection
-of some the most common, and some more unusual, finite elements.
+of some of the most common, and some more unusual, finite elements.
 
 %------------------------------------------------------------------------------
 \section{The finite element definition}
@@ -36,7 +36,7 @@ reads as follows:
 %%
 Similar ideas were introduced earlier in
 \citet{CiarletRaviart1972}\footnote{The Ciarlet triple was originally
-  written as~$(K, P, \Sigma)$ with $K$ denoting $T$ and $\Sigma$
+  written as~$(K, P, \Sigma)$ with $K$ denoting $T$, P denoting $\CiarletSpace$, and $\Sigma$
   denoting~$\mathcal{L}$.}, in which unisolvence\footnote{To check
   whether a given set of linear functionals is a basis for
   $\CiarletSpace'$, one may check whether it is \emph{unisolvent} for
@@ -1120,7 +1120,7 @@ interpolating polynomials on the line segment
 element literature almost from the beginning, appearing at least as
 early as the classic paper by \citet{CiarletRaviart1972}. They have
 long been known as useful $C^1$-nonconforming elements
-\citep{Braess2007,Ciarlet2002}.  Under affine mapping, the Hermite
+\citep{Braess2007,Ciarlet2002}.  Under affine mappings, the Hermite
 elements form \emph{affine-interpolation equivalent} families
 \citep{BrennerScott2008}.
 
@@ -1178,7 +1178,7 @@ Hermite elements are:
 Unlike the cubic Hermite functions on a line segment, the cubic
 Hermite triangle and tetrahedron cannot be patched together in a fully
 $C^1$ fashion. The cubic Hermite element can be extended to higher
-degree \citep{BrennerScott2008}
+degree \citep{BrennerScott2008}.
 
 
 \subsection{The Morley element}
@@ -1248,7 +1248,7 @@ Here, we choose to call such a space $W$ an \emph{enriched space}.
 The enrichment of a finite element space can lead to improved
 stability properties, especially for mixed finite element
 methods. Examples include the enrichment of the Lagrange element with
-bubble functions for use with Stokes equations or enriching the
+bubble functions for use with the Stokes equations or enriching the
 Raviart--Thomas element for linear elasticity
 \citep{ArnoldBrezziDouglas1984, ArnoldBrezziFortin1984}. Bubble
 functions have since been used for many different applications. We
