change macro to avoid conflict with UFL chap.

--- a/tex/35.tex
+++ b/tex/35.tex
@@ -24,7 +24,7 @@
 \end{figure}}
 
 
-\newcommand{\mop}[1]{\operatorname{#1}}
+\newcommand{\nop}[1]{\operatorname{#1}}
 
 In this chapter, we describe the implementation of block
 preconditioned Krylov solvers for systems of partial differential
@@ -606,7 +606,7 @@ coarse meshes.  The complete code can be found in \emp{timestokes.py}
 The final example is a mixed formulation
 of the Hodge Laplacian,
 \begin{align}
-\mop{rot} \mop{curl} u - \Grad p &= f \quad \mbox{in} \ \Omega,    \label{mixed:hodge1} \\
+\nop{rot} \nop{curl} u - \Grad p &= f \quad \mbox{in} \ \Omega,    \label{mixed:hodge1} \\
 \Div u -p &=  0 \quad \mbox{in} \ \Omega, \label{mixed:hodge2} \\
              u \times n &= 0 \quad \mbox{on} \ \partial \Omega, \\
              p          &= 0 \quad \mbox{on} \ \partial \Omega.
@@ -614,7 +614,7 @@ of the Hodge Laplacian,
 The variational form is: \\
 Find $u, p \in H_0(\operatorname{curl}) \times H^1_0$ such that
 \begin{align}
-\int_\Omega \mop{curl} u \cdot \mop{curl} v \dx
+\int_\Omega \nop{curl} u \cdot \nop{curl} v \dx
 - \int_\Omega \Grad p \, v \dx &= \int_\Omega f v \dx  \quad \foralls v \in H_0(\operatorname{curl}), \\
  \int_\Omega u  \Grad q \dx - \int_\Omega p q \dx &= 0 \quad
  \foralls q \in H^1_0.
@@ -636,7 +636,7 @@ Let
 \]
 where,
 \begin{align}
-  (A u, v) &= \int_\Omega \mop{curl} u \cdot \mop{curl} v \dx, \\
+  (A u, v) &= \int_\Omega \nop{curl} u \cdot \nop{curl} v \dx, \\
   (B p, v) &=  - \int_\Omega \Grad p \, v \dx, \\
   (C p, q) &=  - \int_\Omega p \, q \dx.
 \end{align}
@@ -649,7 +649,7 @@ However, if we for the moment forget about the boundary conditions,
 we can obtain the Laplacian form  by eliminating $p$
 from \eqref{mixed:hodge1}-\eqref{mixed:hodge2}; that is,
 \[
-\mop{rot} \mop{curl} u - \Div \Grad u = f .
+\nop{rot} \nop{curl} u - \Div \Grad u = f .
 \]
 Hence, the problem is elliptic
 in nature and modulo boundary conditions,  $\mathcal{A}: H^1 \times L^2 \rightarrow  H^{-1} \times L^2$.
