--- a/tex/BM1.tex
+++ b/tex/BM1.tex
@@ -194,7 +194,8 @@
              {kent-and@simula.no}
              {Center for Biomedical Computing at Simula Research Laboratory, Norway \\
               Department of Informatics, University of Oslo, Norway}
-             {This work is supported by a Center of Excellence grant
+             {This work is supported by a Center of Excellence grant 
+              and Grant 209951
               from the Research Council of Norway to the Center for
               Biomedical Computing at Simula Research Laboratory.}
              {Chapters
