--- a/tex/23.tex
+++ b/tex/23.tex
@@ -32,13 +32,13 @@ caused by an insufficient supply of blood to parts of the brain. There
 are mainly two different types of strokes: ischemia caused by
 obstructions in the blood vessels, and subarachnoid hemorrhage caused
 by the rupture of one or more aneurysms. Aneurysms typically develop
-in or near the so-called Circle of Willis (CoW), which is an arterial
+in or near the so-called Circle of Willis, which is an arterial
 network of vessels at the base of the brain. The function of this
 circle is believed to be to ensure a robust and redundant system in
 the sense that the brain receives a sufficient amount of blood even if
 one of the vessels is occluded or under-developed. This network
 connects the internal carotid arteries (ICA) and the vertebral
-arteries (VA) in a circle-like structure. This network is the main
+arteries (VA) in a circle-like structure, and it is the main
 supplier of blood to the brain. Figure~\ref{fig:kvs-2:textbook-circle}
 shows the circle as typically depicted in textbooks. Blood enters the
 circle through the ICAs, which are located at the front of the neck,
@@ -55,7 +55,7 @@ Section~\ref{cok}, is shown in Figure~\ref{fig:kvs-2:circle_kent}.
   \centering
   \includegraphics[width=\largefig]{chapters/kvs-2/png/cow_gray_1.png} \\
   \caption{Illustration of the Circle of Willis and the base of the brain
-      seen from beneath. The illustration is  taken from Gray's anatomy~\citep{Gray1897}.}
+      seen from beneath. The illustration is taken from Gray's Anatomy~\citep{Gray1897}.}
   \label{fig:kvs-2:textbook-circle}
 \end{figure}
 
@@ -89,7 +89,7 @@ vasculature \citep{Humphrey2001,Stehbens1975}.  Furthermore, the
 anatomy of cerebral vessels varies greatly. Only around 50\% of the
 general population have a complete and well-balanced circle; the rest
 either have under-developed vessels or the vessels are missing
-completely \citep{Fung1984}. Gender, ethnicity, and lifestyle have
+completely \citep{Fung1984}. Gender, ethnicity and lifestyle have
 shown to be of
 importance \citep{MhurchuAndersonJamrozikEtAl2001,LongstrethNelsonKoepsellEtAl1994,KongableLanzinoGermansonEtAl1996}.
 
@@ -112,7 +112,7 @@ wall. In the code, \emp{n} is the outward-pointing unit normal. To
 compute the shear and normal stresses as fields over the mesh, we test
 the stresses against piecewise constant test functions scaled by the
 inverse area of each facet. We thus obtain a piecewise constant
-representation of the stresses which on each cell is equal to the
+representation of the stress which on each cell is equal to the
 average stress on that cell.
 
 \begin{figure}
@@ -155,7 +155,7 @@ where the average velocity was measured for seventeen young patients
 at rest. The nondimensionalized velocity is illustrated in
 Figure~\ref{fig:kvs-2:ford}. The inlet velocity profile is easy to
 measure through the ICA or the VA using transcranial Doppler. This
-enables patient-specific velocity measurements such as in the CoW
+enables patient-specific velocity measurements such as in the Circle of Willis
 study in Section~\ref{cok}.
 
 \begin{figure}
@@ -187,7 +187,7 @@ flow; that is, the pressure at the outlet~$\Gamma$ is modeled as,
 \end{equation}
 where the resistance coefficient~$C$ was set according to
 Table~\ref{resistance_coeff}, $p_0$ is the mean intracranial arterial
-pressure (85 mmHg) which is applied to the inlet and $u$ is the
+pressure (85 mmHg), which is applied to the inlet, and $u$ is the
 velocity. The coefficients in Table~\ref{resistance_coeff} are
 from \citet{AlastrueyParkerPeiroEtAl2007} and show a clear relation
 between the diameter of the vessel and the resistance coefficient. The
@@ -208,7 +208,7 @@ Figure~\ref{fig:kvs-2:resistance_code}.
     \bottomrule
   \end{tabular}
   \caption{Resistance boundary condition coefficient, $C$,
-    for selected arteries of varying size; see~\eqref{kvs-2:eq:resistancebc}.}
+    for selected arteries of varying size; see Equation~\eqref{kvs-2:eq:resistancebc}.}
   \label{resistance_coeff}
 \end{table}
 
@@ -228,7 +228,7 @@ def OutflowBoundaryValue(self, i):
     R = (C*Q + p0)*(rhoinv)
     return R
 \end{python}
-\caption{Calculation of outflow boundary value for pressure. The
+\caption{Calculation of the outflow boundary value for the pressure. The
 numbers have been multiplied with $10^{-3}$
 and $10^{-6}$ to convert from SI units to millimeters, milliseconds
 and grams.}
@@ -272,7 +272,7 @@ in order to converge.
 
 Patient-specific geometries are obtained from Computed Tomography
 Angiography (CTA) or Magnetic Resonance Angiography (MRA) images as
-follows. A stack of 2D images is used as input to the \citet{vmtk},
+follows. A stack of 2D images is used as input to the \citet{vmtk} (VMTK),
 where a 3D surface model is generated based upon the light intensity
 in the pictures using level set techniques. A volume is then created
 from the surface, from which a mesh can be generated. This process is
@@ -291,7 +291,7 @@ intracranial bifurcations.
 \subsection{Background}
 
 Females are more likely to harbor intracranial aneurysms than men and,
-consequentially, more frequently develop subarachnoid hemorrhage
+consequently, more frequently develop subarachnoid hemorrhage
 (SAH) \citep{EdenMeurerSanchezEtAl2008}. The reason is not known, but
 studies suggest an increased risk of aneurysm rupture after the age of
 fifty, in the postmenopausal years. This might indicate the influence
@@ -319,8 +319,8 @@ physiologically plausible appearance.
 Average gender specific blood flow velocity measurements from the ICA
 and MCA from \citet{KrejzaSzydlikLiebeskindEtAl2005} were used as
 inflow boundary conditions in the simulations. Table~\ref{bcs}
-summarizes the input values to the simulations,
-see \citet{LindekleivValen-SendstadMorganEtAl2010}.  At the outflows,
+summarizes the input values to the simulations.
+At the outflows,
 we have applied a resistance boundary condition as described in
 Section~\ref{resistance_bcs}.
 
@@ -336,8 +336,8 @@ shear stress and a larger affected area in the female MCA
 shear stress in the MCA bifurcations was 33.17~Pa for females and
 27.82~Pa for males. Similar results for ICA were 15.20~Pa for females
 and~10.10~Pa for males. The values are reflected by a higher pressure
-drop in the female than the male bifurcations (664 vs 502~Pa for MCA
-and 344 vs 202 Pa for ICA). For further discussion,
+drop in the female than in the male bifurcations (664 vs. 502~Pa for MCA
+and 344 vs. 202 Pa for ICA). For further discussion,
 see \citet{LindekleivValen-SendstadMorganEtAl2010}.
 
 \subsection{Discussion}
@@ -372,11 +372,11 @@ women develop more aneurysms than men.
     $V$~[m/s]	  & 0.68   & 0.74     & 0.34   & 0.42  \\
     \bottomrule
   \end{tabular}
-  \caption{Summary of angles, diameters, and velocities used for the
-    bifurcations, see Figure~\ref{fig:kvs-2:bif}, used in the
+  \caption{Summary of angles, diameters and velocities for the
+    bifurcation of Figure~\ref{fig:kvs-2:bif}, used in the
     simulations. The parameters $\alpha$ and $\beta$ are the angles
     between the prolongation of the parent artery and the vessels C
-    and B respectively.}
+    and B, respectively.}
   \label{bcs}
 \end{table}
 
@@ -413,17 +413,17 @@ measurements.
 Four-dimensional PC MRA is a noninvasive technique to measure flow in
 the vascular system. The image acquisition consists of a scan time of
 roughly 8 minutes. The canine had an average heart rate of 101 beats
-per minute, so the obtained images are an average over 808 heart
+per minute, and the obtained images were averaged over 808 heart
 cycles. There is naturally no guarantee for a constant heart beat in
 the canine, which is a source for errors. Still, errors in
 the overall velocities have been shown to
-be of order 3-10\% in large arteries such as the human pulmonary arteries;
-see \citet{LotzMeierLeppertEtAl2002,EvansIwaiGristEtAl1993} and
+be of the order of 3-10\% in large arteries such as the human pulmonary arteries;
+see \citet{LotzMeierLeppertEtAl2002,EvansIwaiGristEtAl1993}, and
 the accuracy of the measurements are therefore judged to be acceptable
 for clinical use.
 
-The resolution is coarse in both space and time, and computation of
-forces such as WSS might be difficult. In addition to this, there
+The resolution is coarse in both space and time, and the computation of
+forces such as WSS might thus be difficult. In addition to this, there
 might be locations in the vascular system where stenosis or plaque is
 present and the quality of the 4D PC MRA might be poor. These are also
 often the spots of most interest. In many cases, there are also
@@ -512,13 +512,13 @@ were made.
 \begin{python}
 def makeIC():
     Area = 8.04
-    v= array([10939.45, 10714.00, 15406.95,
-              25181.50, 27844.85, 24344.80,
-              19578.05, 16479.55, 15168.80,
-              16878.40, 16700.55, 15118.90,
-              13032.50, 12121.65, 11885.90,
-              11943.60, 10939.45 ]) \
-                    / (Area*(133.0/256)**-2)
+    v = array([10939.45, 10714.00, 15406.95,
+               25181.50, 27844.85, 24344.80,
+               19578.05, 16479.55, 15168.80,
+               16878.40, 16700.55, 15118.90,
+               13032.50, 12121.65, 11885.90,
+               11943.60, 10939.45 ]) \
+                     / (Area*(133.0/256)**-2)
 
     t = 0.037*arange(len(v))
     t_period = 0.037*16
@@ -544,12 +544,11 @@ corresponding to the current time.
 \begin{python}
 class InflowBoundaryValue(Expression):
 
-    def init(self, problem=None, side=None):
+    def init(self, problem=None):
         self.problem = problem
-        self.side = side
         self.bc_func, self.t_period = makeIC()
 
-    def eval_data(self, values, data):
+    def eval_data(self, values, x, ufc_cell):
         n = data.cell().normal(data.facet())
         t = self.problem.t
         val = splev(t - int(t/self.t_period)*self.t_period, self.bc_func)
@@ -590,14 +589,14 @@ time step four in both left (inflow) and right (outflow) image of the
 figure, but the ``bump'' at mid deceleration has shifted from time
 step seven at the inflow to eight at the outflow.  This may be because
 of the so-called Windkessel effect, which may only be captured using a
-fluid structure interaction model, but it is difficult to conclude due
+fluid--structure interaction model, but it is difficult to conclude due
 to the coarseness of the measurements.
 
 A limitation of the current study is that the results should not be
 interpreted as physiologically correct since the technique consists of
 cutting off one of the ICAs and creating an artificial bifurcation
 (and aneurysm) by moving the rest of the vessel over to the other
-ICA. This means that one of the ICAs supply both left and right sides
+ICA. This means that one of the ICAs supplies both left and right sides
 of the canine brain.
 
 In the 4D PC MRA measurements at the left side of the parent artery in
@@ -613,7 +612,7 @@ resolution of the 4D PC MRA data. For a more thorough description, we
 refer to \citet{JiangJohnsonValen-SendstadEtAl2010}.
 
 Each of the two methods has its strengths and weaknesses. While 4D PC
-MRA is fast, cheap, and harmless, it uses average values over a voxel
+MRA is fast, cheap and harmless, it uses average values over a voxel
 volume and fails to correctly compute WSS, recirculation zones, and
 possible turbulent structures. It also fails to provide values where
 the VENC is out of focus or in the presence of a stenosis. In
@@ -621,7 +620,7 @@ contrast, CFD is expensive but may provide accurate computations of
 WSS over the entire domain.
 
 Combined, the two methods may give a better understanding of the
-importance of boundary conditions, whether or not fluid structure
+importance of boundary conditions, whether or not fluid--structure
 interaction is of importance, and possible pitfalls using the
 different methods. A first natural extension of this study may be to
 describe blood as a non-Newtonian fluid to determine whether or not
@@ -633,7 +632,7 @@ non-Newtonian effects are of importance.
 \subsection{Background}
 
 In a study performed in collaboration with clinicians from the
-Neuroradiology department at Rikshospitalet University Hospital in
+Neuroradiology department at Riks\-hospitalet University Hospital in
 Oslo, we wanted to investigate whether we are able to reproduce
 velocities in a full Circle of Willis with measurements at the inflow
 and compare with measurements at the outflow using resistance boundary
@@ -674,10 +673,10 @@ MCA, PCA, ACA, VA, BA) were segmented as described in
 Section~\ref{vmtk}. The simulations were performed on meshes with
 three boundary layers where the number of tetrahedron cells were
 approximately $400,000$, $900,000$ and $2,600,000$. We used continuous
-linear elements for both velocities and pressure, and an incremental
+linear elements for both velocity and pressure, and an incremental
 pressure correction scheme with Adams--Bashford implicit convection
 and Crank--Nicolson diffusion to solve the incompressible
-Navier--Stokes equations. The resolution in time was 3532 time steps
+Navier--Stokes equations. The resolution in time was 3,532 time steps
 per heart beat on the coarsest mesh.
 
 \subsection{Results}
@@ -703,7 +702,7 @@ velocities for the major arteries.
   \caption{Measured versus computed values for flow
     velocities [cm/s] at left (L) and right (R) outflow arteries in a patient-specific Circle of Willis at peak
     systole. The cells with two values refer to different measurements
-    made with a 5 weeks difference in time.}
+    made 5~weeks apart.}
   \label{measure_vs_comp}
 \end{table}
 
@@ -716,16 +715,16 @@ there are many sources of error that must be considered.  First, TCD
 is difficult to perform and subject to errors. Personal communication
 with the neuroradiologist suggests errors at the scale of 20\%.
 Second, we have no information on when peak systole appears in the
-different arteries. It seams reasonable that there is a small shift in
+different arteries. It seems reasonable that there is a small shift in
 time since the blood flows from the heart and through different
-arteries before it meets in CoW. At present, we have not been able to
+arteries before it meets in the Circle of Willis. At present, we have not been able to
 quantify this shift. Third, the velocity itself may differ at
 different times for various reasons. This is illustrated by the cells
 containing two values in Table~\ref{measure_vs_comp}, which refer to
 two measurements of the same vessel in the same person only 5 weeks
 apart.
 
-It is also a great challenge to segment the complete CoW due to great
+It is also a great challenge to segment the complete Circle of Willis due to great
 variations in diameters. This is clearly visible when performing an
 automatic segmentation where many of the smaller vessels disappear.
 It is known that the BA has approximately 50 tiny vessels that are
@@ -752,8 +751,7 @@ def area(self, i):
     f = Constant(1)
     A = f*ds(i)
     a = assemble(A,
-                 exterior_facet_domains=\
-                 self.sub_domains,
+                 exterior_facet_domains=self.sub_domains,
                  mesh=self.mesh)
     return a
 \end{python}
@@ -772,8 +770,8 @@ def area(self, i):
   \centering
   \includegraphics[width=\largefig]{chapters/kvs-2/pdf/cok_slice.pdf} \\
   \includegraphics[width=\largefig]{chapters/kvs-2/pdf/cok_ica_vel_peak_syst.pdf}
-  \caption{The image on the left shows the plane where the image on
-    the right has been cut.  The right figure shows highly
+  \caption{The image on the top shows the plane where the bottom
+    image has been cut. The bottom image shows highly
     non-uniform flow in ICA.}
   \label{fig:kvs-2:cok_ica}
 \end{figure}
