Another fix in Chapter 3

--- a/tex/3.tex
+++ b/tex/3.tex
@@ -36,7 +36,7 @@ reads as follows:
 %%
 Similar ideas were introduced earlier in
 \citet{CiarletRaviart1972}\footnote{The Ciarlet triple was originally
-  written as~$(K, P, \Sigma)$ with $K$ denoting $T$, P denoting $\CiarletSpace$, and $\Sigma$
+  written as~$(K, P, \Sigma)$ with $K$ denoting $T$, $P$ denoting $\CiarletSpace$, and $\Sigma$
   denoting~$\mathcal{L}$.}, in which unisolvence\footnote{To check
   whether a given set of linear functionals is a basis for
   $\CiarletSpace'$, one may check whether it is \emph{unisolvent} for
